--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       </div>      
       <ul id="myUL">
         <li>Реализовать «Список дел»</li>
-        <li class="checked">Сверстать</li>  
+        <li>Сверстать</li>  
         <li>Выложить на github</li>
         <li>Добавить в список «Pure JavaScript and CSS»</li>
+        <li class="checked">Проверить</li>
       </ul>  
     </div>    
   <script src="index.js">
