--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./index.css">  
-  <title>Мой список дел</title>
+  <link rel="stylesheet" href="./cssToDoList.css">  
+  <title>Список моих дел</title>
 </head>
 <body>  
   <div class="container">     
@@ -16,10 +16,9 @@
       </div>      
       <ul id="myUL">
         <li>Реализовать «Список дел»</li>
-        <li>Сверстать</li>  
+        <li class="checked">Сверстать</li>  
         <li>Выложить на github</li>
         <li>Добавить в список «Pure JavaScript and CSS»</li>
-        <li class="checked">Проверить</li>
       </ul>  
     </div>    
   <script src="index.js">
